# CursesTest

./: CMakeLists.txt  README.md
Source/: decode_video.c  main.cpp
